# ChangeLog for net-misc/socat
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/socat/ChangeLog,v 1.121 2014/01/29 10:45:46 jer Exp $

  29 Jan 2014; Jeroen Roovers <jer@gentoo.org> socat-1.7.2.3.ebuild:
  No need for eautoreconf.

*socat-2.0.0_beta7 (29 Jan 2014)
*socat-1.7.2.3 (29 Jan 2014)

  29 Jan 2014; Jeroen Roovers <jer@gentoo.org> +socat-1.7.2.3.ebuild,
  -socat-2.0.0_beta6.ebuild, +socat-2.0.0_beta7.ebuild:
  Version bump (bug #499668).

  09 Jun 2013; Jeroen Roovers <jer@gentoo.org> -socat-1.7.2.1.ebuild:
  Old.

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> socat-1.7.2.2.ebuild:
  Stable for sparc, wrt bug #471354

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> socat-1.7.2.2.ebuild:
  Stable for ppc, wrt bug #471354

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> socat-1.7.2.2.ebuild:
  Stable for ia64, wrt bug #471354

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> socat-1.7.2.2.ebuild:
  Stable for alpha, wrt bug #471354

  04 Jun 2013; Sergey Popov <pinkbyte@gentoo.org> socat-1.7.2.2.ebuild:
  Stable on amd64 and x86, wrt bug #471354

  02 Jun 2013; Markus Meier <maekke@gentoo.org> socat-1.7.2.2.ebuild:
  arm stable, bug #471354

  28 May 2013; Jeroen Roovers <jer@gentoo.org> socat-1.7.2.2.ebuild:
  Stable for HPPA (bug #471354).

  27 May 2013; Jeroen Roovers <jer@gentoo.org> socat-1.7.2.2.ebuild:
  Fix ifconfig path in test.sh.

  27 May 2013; Jeroen Roovers <jer@gentoo.org> socat-2.0.0_beta6.ebuild:
  Remove unneeded autotools.

  27 May 2013; Jeroen Roovers <jer@gentoo.org>
  -files/socat-1.7.2.0-cross-compile.patch, -socat-2.0.0_beta5.ebuild:
  Old.

*socat-1.7.2.2 (27 May 2013)
*socat-2.0.0_beta6 (27 May 2013)

  27 May 2013; Jeroen Roovers <jer@gentoo.org> +socat-1.7.2.2.ebuild,
  +socat-2.0.0_beta6.ebuild:
  Version bump (bug #471354).

  02 Dec 2012; Tim Harder <radhermit@gentoo.org> socat-1.7.2.1.ebuild:
  Inherit autotools eclass (bug #445526).
