@@ -4,10 +4,10 @@ DESCRIPTION=Multipurpose relay (SOcket CAT)
 EAPI=5
 HOMEPAGE=http://www.dest-unreach.org/socat/
 IUSE=ssl readline ipv6 tcpd
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~sparc ~x86 ~ppc-macos ~x64-macos ~x86-macos
+KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~mips ~ppc ~sparc ~x86 ~ppc-macos ~x64-macos ~x86-macos
 LICENSE=GPL-2
 RDEPEND=ssl? ( >=dev-libs/openssl-0.9.6 ) readline? ( >=sys-libs/ncurses-5.1 >=sys-libs/readline-4.1 ) tcpd? ( sys-apps/tcp-wrappers )
 SLOT=0
 SRC_URI=http://www.dest-unreach.org/socat/download/socat-1.7.2.3.tar.bz2
 _eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	flag-o-matic	62e05953761097ae84a70d6c7a3e2c9c	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=bbe243a746461399ab29c7ec8f04d6bb
+_md5_=88a79385d737c40d6b02485bea7f09ca
