@@ -10,4 +10,4 @@ RDEPEND=sys-libs/readline bzip2? ( app-arch/bzip2 ) blas? ( virtual/blas ) glpk?
 SLOT=0/3
 SRC_URI=http://www.coin-or.org/download/source/CoinUtils/CoinUtils-2.9.11.tgz
 _eclasses_=autotools	d76ee21296238133bd2df8dea7f33a05	autotools-utils	559ed17194292ec42d68145dcca2fa32	eutils	40081e8c7e7f7c4f9db349a1d6d52925	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=096afbbcc5282ac7ed75e9f99f71f0c5
+_md5_=2b78107a88003063314f1ad3ac10b14e
