@@ -6,14 +6,14 @@ DIST socat-1.7.2.2.tar.bz2 433222 SHA256 9a167af11a4d3809cbc66f5e2dcb39b6e371251
 DIST socat-1.7.2.3.tar.bz2 424461 SHA256 0598ac54af7b138cda9e3c141bcf0cc63eeb2ab31f468a772dc3f7eb3896aad0 SHA512 d34dea6d8fb29d25871b881c1aaf9d02ab69c95e90f6eba54dd3626987b7a19595ba06306abffb735b2ee014052a2ef37803166b6108c4edc57e1c8f511aef9f WHIRLPOOL ce1ec2886ed897e2db15946edcf7ad1026b965d097963f8dec9fff767958b640e7bf3b72de67c094d25c4857c40bbdbd15abf01b940367a994176c04792aa4f3
 DIST socat-2.0.0-b7.tar.bz2 466584 SHA256 f3f964e69db2dc9957757185cfed498c6d245af6f5b808e4003c7e9b194bd340 SHA512 1f1e18a901842d98fcc63888ee126bd5d2cc6f2c239589a3b940a10886bc3ec97fef83a1ad3c3436b986e79e2e16e3cc28fd9ba6ac342866a20560b238274b62 WHIRLPOOL 439196b5a560fb859c41d8b2b8881f480168709895fab73b7637c9964c18cf2a1ec4e0dc6273732d783c557a3b0e433356a5c1d37278570aee011f694eec88b2
 EBUILD socat-1.7.2.2.ebuild 1366 SHA256 e8a3ac5e5478e35e9bcc2bcac6640f1a63e1b1cd40f84df149c98e226ffaf71f SHA512 faec6c995620da72cac95e38a2bec6dbd797a179a6d150f12b8ded5b7253eeb7c91e883314bdd822fc18fff0e5d284c1f72ddcca5f2f4917e106be67a697a3c0 WHIRLPOOL 7bea7976d1259706fa245885b0d37e19b9f483406dc809346fb68dcb665567b4d7e4c8a679da47e5a7e2d0336924fa9a2791b76e7eb54182986a92849db83deb
-EBUILD socat-1.7.2.3.ebuild 1349 SHA256 493ae9b86f0943a0ff7209bd312c3a30cb9429c4634caa6a7c435e0b4ccff671 SHA512 d194fd3026117d2375c1dda0645573ee51202aa8a87113c4e25eaba3adceb40612fa4075a9ddc560bc7921038b05749a8f1941f7ced81e5705bff8e0c86aadf7 WHIRLPOOL 6fab69e698c030529a180dbdb171dbf46687dae45015a05d5b8dd9f261da90783c899543e5c4ac8b19e863895be26234836ebbf4914e564a3965506c64a37260
+EBUILD socat-1.7.2.3.ebuild 1348 SHA256 27221791d3ed0a93fe5e1584873686e85af454b70b0de3b859ee41ecfcfdee27 SHA512 271f5ce557f8ede3b4a125f28fe72ef2e2937bbb58e45dccf5f3812bab758ed99e99b827b6ebbe1fc1d3eefc582f2706d08de27972d1d0c216333d3b43a8d93e WHIRLPOOL eead4cad69f824b5631cec9b9b73faa6af6d63723d2cba011b663d1e19794aaca54c3cc4abed961e6814f92ee22b63b3c7094c442a10e031902b98753921769e
 EBUILD socat-2.0.0_beta7.ebuild 1299 SHA256 d9367946a9725a4c54f739dae03e31a08369702fb0c104212fb3bed81436164f SHA512 39fd9d036679f1da81ca46223b743025dc9522bdc9be5ecd42a4ce9801c645614ca960b8911689b0197c914756f1e0080974daf71830bfb1f9437a033da94415 WHIRLPOOL 345031ea40e87de1c1af33da47f8b2a5b490b169e90c5ce88636865ce165b3ce5f258a9515c76a43188e2316b03da59b059d1679463e343fb159ce9e15b232ef
-MISC ChangeLog 15530 SHA256 4d0a10317c322395f76f747f7adf3aa3e4dc052049c839cdd548ef902f8be2b2 SHA512 61b2cd005fdf1abcfd5825bdb166d199eeae70037130c4648a3b7ac5bdb555a9a09bfbe82f5c6cf73dc062af2fcbb60b921acfd45507a9269b44d775be3bcf80 WHIRLPOOL 3f387ef8a01cf7a0259d8316f8167b24a66796c1c6ab2386599a06b41ca41fc218541f7e13077585cb71411f3ee79d8689b8edd5194d4a8822229441e5e504af
+MISC ChangeLog 15633 SHA256 373a8e716f4134e8117a7cc7bb00d3bcd66ee5d3343967f22757bea09f900852 SHA512 2e1e1936d03d30179d648c8aafcf52aa8a849a224a5a5450a57b587334ffa0ddaac79014e505600122d6bd43532c9f3ac439a2ae6ca1fe2af19c8a662a5b75b3 WHIRLPOOL ea7e167abfabc3d4c16e413dbb4b895f5d767ec4aeac2d801e5bf34c68740487b09750e2ca3dd400bd875c169575e09225c544b472bc1dff384ef18f03e30ae3
 MISC metadata.xml 160 SHA256 39e232fc7ec88ca0b077cb3950cb39d15cd990842b88d5bfe14f02f34d72f37b SHA512 3ac3a74a7cdf45b14884d967b10e4752f9cb06c579f6d7baf921f9be5450cbe7536c2e5a480ac3c95156eb6abb32e68f74cecc86b9ac0dcc4e0e1b4b255c3e20 WHIRLPOOL f7504ce9e3e8a58d19bba5448305f806c2ae01d0a8d2cf09d6bc6a089a6e1c28a1b12a80bb6020584b5ed21df94e4936b1695a54548704cb8679660b6b807955
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLo29sACgkQVWmRsqeSphNU4wCfVDdBqVksm+8zrIZNrJcKwes4
-Y14AnRZC/4r+Hzj/+r0uS43xGDd3OxTp
-=/22s
+iEYEAREIAAYFAlLo4KUACgkQVWmRsqeSphNiRgCeIH4kg1qs800cqgvo80s8dbbt
+dzoAnjYBPhRSDaY66VdbfU44HlSNAlcM
+=2REG
 -----END PGP SIGNATURE-----
