@@ -1,14 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST CoinUtils-2.9.11.tgz 1740411 SHA256 9c2d9d8f8cb0e249bf3f050afeb02a1a95ad382f55ae98b59d8f7b9ab75cc80b SHA512 3cbbce47cda4d5f63338644853601bf0a3dd9b9388e71a7aea7fedd51dfc007134359e5f12f24d8f6135d86b77a88a95bcb88249b1ba880eb3cd9cf41d039424 WHIRLPOOL 8a2d2b2eea7c11d38f10449ac13bc9c70e1ac6e01469e2d4014d1206cbe48681d949509ec6cc0074e6e603f45152ead6145b6b19e2d2d6c5bf02b572f2174015
-EBUILD coinor-utils-2.9.11.ebuild 1868 SHA256 6737a0c3d134b1191f466d8c63a0eebbff16e79dced95809e9c336a8c4518ac1 SHA512 3f935fe75777edaa2f1d398626a21413dee2ef24c937a287874cf327391bd0aaa49229176956c4475ebd18d5fbfbb9df3a22cb46f3d5e2fc8d4268f46ee09cef WHIRLPOOL fe06fa20318dbd33c965857530b3948da9a96e045b7bc0ddd55f9ee7526cccd57dc411e490f95f411a6a59870b2c3a258d6bf6629a0b3493114797fdaa74d03c
-MISC ChangeLog 1624 SHA256 6c3bec21be3c2034e7046f4bbd1f51bcc27193857671b07dd74ecd227c3c903c SHA512 cdb5f3ace350c0d06811d2f2f590f0add642ff4f409829e1412bf389923fa582e43a9ec5e054214b7dca3c4e4e1a38376359b591ed48e0c2a54e59dc06af2047 WHIRLPOOL 18ca36a2dbafce8217cf8762fa1d670902b57946c66261c30f8c40fa396630b37e34ca8f88b8628e05018661103d9e49300d3c1673990ffe501d9932c05efad2
-MISC metadata.xml 542 SHA256 ccb5306312576ccb7dc85789733b26ce863d1c77d0295c8347973a4ba21b2ca2 SHA512 fbfbd8820e8d1fab34c5d1317bc2754a01d4dd9dad9158979b8024682aa80af0e0dbb0ef649632c5f7be7b9f6d3c782c06513b7cb59a39119f92abca3eb26f5e WHIRLPOOL f018d5bec9caeac06f06b72fa1973cb16adddf1ecfab722096bd0876b5c4e211c2277cf33462188bebf40b497a09ec13e3461e4fa9fdde07a4b08628b1b2d2ad
+EBUILD coinor-utils-2.9.11.ebuild 2038 SHA256 bf641167efd080915a3e36ab07c10850298c0bcdd16b1d2aced8459b3d9f4ac1 SHA512 b52fb6a1cb7267791692d1371b6d009fe78c439ca02075e5d59e1fe408e91e23b94303aaab82b8bab86cc19cb4167480fe0c6e2d464d00d4e2ec901c8de5f745 WHIRLPOOL 85fe4fd5ecfc3f4894250cd86d51f1baa9101b27f7fe3c14347e5ed9652c4a1efdf770f051c032d40ba24e45b3918bd1794cecb038a75e13cc8df7cc32988c0a
+MISC ChangeLog 1759 SHA256 b490925092701f92812a61a201476c85237ceb7c1cc35e35f71ad38e60e5f5dd SHA512 e68399e8b0f920979e2f538dbf8c86a6948916130e476551331c97918a1a6bbd96fde6f5e63ac1832a61b4b7c0caf51d855bcb52bef234a825835d656d3ef6be WHIRLPOOL 33cc1490ba73fe1616c2f6685db58ea1463607641d9b79ef8918a3885349f0341ff3dcca1e8f760f4d85a0c0f234c2478a67cfd0ffbb6ff0221b20e89e9bf8b2
+MISC metadata.xml 552 SHA256 df09b54a9f0f005fdfc76f3e0db17e6e1a67e3035ba6d6c561dd5549ca20ae6c SHA512 560e2e3fabae8a13f5f74940777e421c709bd0d4213929af1d39074be34d8011c826fd6c97a219b0a88a2cc0f900282f6923d4195f98a80cf3119e455cc69446 WHIRLPOOL ada2aca57b9d347031b225716a901e4b81188ff9dbba28c0097813ea9da8f8d44bb6017506710511efca847ac77f59b9161146ae73da570215004188a854dad2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLW6NgACgkQ1ycZbhPLE2AMswCgkG72OGMFmJcI6E1m3dXMw95u
-QIwAoLE0tIyLuYR4OLyULVVTGXR20OVM
-=vJKm
+iQIcBAEBCgAGBQJS6OAFAAoJELnU8jG9FVirv5AP/2e53CTTMo0xxsAKM1PRZw7Y
+7KxpRfFL4Z1kgNlBDFJtpENYv3uRz5oaZTNHmi9b0L4kZ2V/DeMtGqxHLFQ3uwjp
+9tZiEdShJoI61RrSb856n+PKGAUFwET/7a5PYDE0YYu2rq3X9+DqVM9mqVjJu7VU
+AxG5shpWrRdT+MPOph9uMPKLaiP0pAsLjetNLsCpeHxfSJXh3eNNNkZQofwEd6OR
+lyULw+M7rLafv28KyjNoncs0kVHwrhjj44h5aUMfNf7oHgaycl8Wk+9ELZPI5SGA
+AKLknhtAmLymH/JxjsyRHPCg+wFnvULl3GvWxwFoudFBDSVvoW0cVjeFuAC2mEG3
+p1GaE6PT3Nras6BuolC2wKScwTeBOllAnWDypWentuHBPMiNyG/1vuLUUfo1BLLy
+gS+BbFHvVJ/hfjpYzcDbamJadxR4de57LcY3YenHMcSryxke73iI5lo11252bhUD
+4ar6o+Psv3Snytlv2l+tv50FrdKbLE88l7Qqj1JcMa6QZvuyzV5dCg0w+rQw5pfC
+7DFaows6hXq+bLG5+gqOn6z6N+93Q5SSaOgNkRLA6k9sk2qaSjniuRMMyIU8/u7g
+G3b1JfV3d6RyDCG23D5tEPSKrvqRSuU9j9FTcanuXwSZqJWHtgVc5I2Js9lepBKH
+TvkiXxi6bPOoBMHHWTWG
+=sS6r
 -----END PGP SIGNATURE-----
