@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/coinor-utils
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/coinor-utils/ChangeLog,v 1.2 2014/01/15 20:00:22 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/coinor-utils/ChangeLog,v 1.3 2014/01/29 11:03:32 jlec Exp $
+
+  29 Jan 2014; Justin Lecher <jlec@gentoo.org> coinor-utils-2.9.11.ebuild,
+  metadata.xml:
+  Don't rely on previous installation, #499656
 
   14 Jan 2014; Sébastien Fabbro <bicatali@gentoo.org>
   coinor-utils-2.9.11.ebuild:
